# ProjectM

./: CMakeLists.txt
cmake/: GCC_MSP430_Toolchain.cmake
docs/: Logic.md
examples/HelloWorld/: CMakeLists.txt
include/: Math.h
src/: CMakeLists.txt  Math.c
tests/unit_tests/: CMakeLists.txt  UnitTests.cpp
